Update banner text, add banner image, organize grid for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -26,15 +28,71 @@
         </nav>
     </header>
 
+    <!-- Banner Section with Image -->
+    <section class="banner">
+        <div class="banner-overlay"></div>
+        <img src="assets/images/banner.jpg" alt="Organic Fresh Food" class="banner-img">
+        <div class="banner-text">
+            <h2>Welcome to Organic Delights</h2>
+            <p>Your ultimate destination for fresh, organic, and nutrient-packed foods.</p>
+        </div>
+    </section>
+
+
+    <!-- Introduction Section -->
     <main>
         <section class="intro">
-            <h2>Welcome to Organic Delights</h2>
-            <p>Explore our range of fresh, organic, and nutrient-packed vegetables. Learn about the benefits of lettuce, spinach, and broccoli for your health.</p>
+            <h2>Discover the Benefits of Organic Food</h2>
+            <p>Organic Delights offers you the best in organic vegetables, fruits, and more. Eating healthy has never
+                been easier!</p>
+            <p>From leafy greens to vibrant fruits, our produce is designed to boost your health and vitality.</p>
         </section>
+
+        <!-- Food Grid Section -->
+        <h2>Our Top Organic Picks</h2>
+
+        <section class="food-grid">
+            <div class="food-item">
+                <h3>Lettuce</h3>
+                <p>A fresh and crispy vegetable, perfect for salads. Rich in vitamins A and K.</p>
+                <ul>
+                    <li>Calories: 15 kcal</li>
+                    <li>Vitamin A: 7400 IU</li>
+                    <li>Vitamin K: 126 µg</li>
+                </ul>
+            </div>
+            <div class="food-item">
+                <h3>Spinach</h3>
+                <p>Loaded with iron and calcium, spinach is a superfood that helps keep you energized.</p>
+                <ul>
+                    <li>Calories: 23 kcal</li>
+                    <li>Iron: 2.7 mg</li>
+                    <li>Calcium: 99 mg</li>
+                </ul>
+            </div>
+            <div class="food-item">
+                <h3>Broccoli</h3>
+                <p>A versatile vegetable rich in fiber, antioxidants, and vitamins C and K.</p>
+                <ul>
+                    <li>Calories: 55 kcal</li>
+                    <li>Vitamin C: 89 mg</li>
+                    <li>Fiber: 2.6 g</li>
+                </ul>
+            </div>
+        </section>
+
+        <div class="section-reason-to-eat-organic-food">
+            SECTION FOR WHY SHOULD EAT ORGANIC FOOD
+        </div>
+
+        <div class="SECTION-organic-food-and-our-environment">
+            Organic food is better for the environment
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2024 Organic Delights | Fresh and Healthy Choices</p>
     </footer>
 </body>
+
 </html>
